# docs/swagger/swagger.yaml
@@ -166,6 +166,11 @@ definitions:
     type: object
   AppAuthConfig:
     properties:
+      anonymous:
+        properties:
+          enabled:
+            type: boolean
+        type: object
       oidc:
         properties:
           audience:
@@ -344,6 +349,18 @@ definitions:
         type: integer
       total:
         type: integer
+    type: object
+  AuthenticateAnonymousDTO:
+    properties:
+      email:
+        type: string
+      metadata:
+        $ref: '#/definitions/JSONMap'
+      name:
+        maxLength: 255
+        type: string
+      picture:
+        type: string
     type: object
   AuthenticateResponse:
     properties:
@@ -1692,6 +1709,37 @@ paths:
       summary: Update app auth config
       tags:
       - app
+  /apps/{code}/auth/anonymous:
+    post:
+      consumes:
+      - application/json
+      description: Creates or authenticates an anonymous app user.
+      parameters:
+      - description: App code
+        in: path
+        name: code
+        required: true
+        type: string
+      - description: Anonymous user data
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/AuthenticateAnonymousDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AuthenticateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+      summary: Authenticate anonymously
+      tags:
+      - auth
   /apps/{code}/authenticate/{provider_name}:
     post:
       description: Authenticates an app user through the given auth provider (e.g.
