# internal/module/appauth/dto.go
@@ -4,6 +4,7 @@ import (
 	"time"
 
 	"github.com/usesnipet/snipet/internal/model"
+	"github.com/usesnipet/snipet/pkg/jsonx"
 )
 
 // UserResponse exists so swagger annotations in this package can reference it
@@ -16,6 +17,13 @@ type AuthenticateResponse struct {
 	RefreshToken          string       `json:"refresh_token"`
 	RefreshTokenExpiresAt time.Time    `json:"refresh_token_expires_at"`
 	User                  UserResponse `json:"user"`
+}
+
+type AuthenticateAnonymousDTO struct {
+	Name     *string       `json:"name" validate:"omitempty,max=255"`
+	Picture  *string       `json:"picture" validate:"omitempty,url"`
+	Email    *string       `json:"email" validate:"omitempty,email"`
+	Metadata jsonx.JSONMap `json:"metadata"`
 }
 
 type RefreshDTO struct {
